<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>net.java</groupId>
    <artifactId>jvnet-parent</artifactId>
    <version>3</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.swinglabs.swingx</groupId>
  <artifactId>swingx-project</artifactId>
  <packaging>pom</packaging>
  <name>SwingX</name>
  <version>1.6.6-SNAPSHOT</version>
  <url>http://www.swinglabs.org/</url>
  <ciManagement>
    <system>Hudson</system>
    <url>http://swinglabs.org/hudson</url>
  </ciManagement>
  <licenses>
    <license>
      <name>Lesser General Public License (LGPL)</name>
      <url>http://www.gnu.org/copyleft/lesser.html</url>
    </license>
  </licenses>
  <issueManagement>
    <system>JIRA</system>
    <url>http://java.net/jira/browse/SWINGX</url>
  </issueManagement>
  <scm>
    <connection>scm:svn:https://svn.java.net/svn/swingx~svn/trunk</connection>
    <developerConnection>scm:svn:https://svn.java.net/svn/swingx~svn/trunk</developerConnection>
    <url>https://svn.java.net/svn/swingx~svn/trunk</url>
  </scm>
  <description>Contains extensions to the Swing GUI toolkit, including new and enhanced components that provide functionality commonly required by rich client applications.</description>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <tags>
            <tag>
              <!-- implementation tag for methods -->
              <name>impl</name>
              <placement>m</placement>
              <head>This implementation:</head>
            </tag>
            <tag>
              <!-- status tag for types -->
              <name>status</name>
              <placement>t</placement>
              <head>API Status:</head>
            </tag>
          </tags>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <target>11</target>
          <source>11</source>
          <generatedSourcesDirectory>${project.generatedAnnotations}</generatedSourcesDirectory>
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.13</version>
        <inherited>true</inherited>
        <configuration>
          <!-- parallel>classes</parallel -->
          <!-- useSystemClassLoader>true</useSystemClassLoader -->
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <forkMode>always</forkMode>
          <!--reportFormat>xml</reportFormat -->
          <!--classesDirectory>${project.build.directory}/emma-classes</classesDirectory -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <!-- version inherited from parent (2.1) -->
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <!-- this is an external source dependency for building ServiceLoader service files marking optional 
        so we do not export this source only dependency to our consumers specify here to ensure that file movement 
        maintains correct services across all modules -->
      <groupId>org.kohsuke.metainf-services</groupId>
      <artifactId>metainf-services</artifactId>
      <version>1.8</version>
      <type>jar</type>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>2.6</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.10</version>
        <type>jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.jhlabs</groupId>
        <artifactId>filters</artifactId>
        <version>2.0.235</version>
        <type>jar</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>2.25.0</version>
        <type>jar</type>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <properties>
    <project.generatedSourcesDirectory>${project.build.directory}/generated-sources</project.generatedSourcesDirectory>
    <project.generatedAnnotations>${project.generatedSourcesDirectory}/annotations</project.generatedAnnotations>
  </properties>
  <modules>
    <module>swingx-mavensupport</module>
    <module>swingx-testsupport</module>
    <module>swingx-common</module>
    <module>swingx-autocomplete</module>
    <module>swingx-action</module>
    <module>swingx-painters</module>
    <module>swingx-graphics</module>
    <module>swingx-plaf</module>
    <module>swingx-core</module>
    <module>swingx-all</module>
    <module>swingx-beaninfo</module>
    <!-- module>swingx-maps</module -->
    <!-- module>swingx-experimental</module -->
    <!-- module>swingx-demos</module -->
  </modules>
</project>
